<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/text_label_app_name"
        style="@style/Label"
        android:text="@string/main_label_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_app_name"
        style="@style/Label"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_app_name"
        style="@style/Separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_app_name" />

    <TextView
        android:id="@+id/text_label_version_code"
        style="@style/Label"
        android:text="@string/main_label_version_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_app_name" />

    <TextView
        android:id="@+id/text_version_code"
        style="@style/Label"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/separator_app_name" />

    <View
        android:id="@+id/separator_version_code"
        style="@style/Separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_version_code" />

    <TextView
        android:id="@+id/text_label_version_name"
        style="@style/Label"
        android:text="@string/main_label_version_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_version_code" />

    <TextView
        android:id="@+id/text_version_name"
        style="@style/Label"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/separator_version_code" />

    <View
        android:id="@+id/separator_version_name"
        style="@style/Separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_version_name" />

    <TextView
        android:id="@+id/text_label_build_type"
        style="@style/Label"
        android:text="@string/main_label_build_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_version_name" />

    <TextView
        android:id="@+id/text_build_type"
        style="@style/Label"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/separator_version_name" />

    <View
        android:id="@+id/separator_build_type"
        style="@style/Separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_build_type" />

    <Button
        android:id="@+id/button_show_flavor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:text="@string/main_button_action_show_flavor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_build_type" />

    <Button
        android:id="@+id/button_show_application_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_small"
        android:text="@string/main_button_action_show_application_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_show_flavor" />

</android.support.constraint.ConstraintLayout>